Sub goals can now be created.
* Only owners of goals can edit these goals, respectively create sub goal.